--- a/samples/netcore3.1/CreateSalesOrder/CreateSalesOrder.csproj
+++ b/samples/netcore3.1/CreateSalesOrder/CreateSalesOrder.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>6f0f8929-a000-40f1-b1f2-26ef414b65f3</UserSecretsId>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -19,6 +19,9 @@
 
   <ItemGroup>
     <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.Development.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
