--- a/samples/netcore3.1/CreateSalesOrder/appsettings.json
+++ b/samples/netcore3.1/CreateSalesOrder/appsettings.json
@@ -3,21 +3,21 @@
   // you could add connection settings here, however for development it is recommended to use 
   // user secrets to keep credentials out of source control
   "saprfc": {
-    "ashost": "SAP-ERP-T",
-    "sysnr": "01",
-    "client": "500",
-    "user": "US_RFC",
-    "passwd": "2rFgIdk04pXz",
-    "lang": "EN"
+    "ashost": "",
+    "sysnr": "",
+    "client": "",
+    "user": "",
+    "passwd": "",
+    "lang": ""
   },
 
   //customizing settings for SAP sales document. 
   //Default values are valid for a IDES system client 800.
   "salesSettings": {
-    "DocumentType": "ZSSU",
-    "SalesOrganization": "0300",
-    "DistributionChannel": "01",
-    "Division": "01"
+    "DocumentType": "",
+    "SalesOrganization": "",
+    "DistributionChannel": "",
+    "Division": ""
   }
 
 }
